fix: マップAPIの仕様を最新版に修正
